sidetoc: make sure post header is aligned to the left

--- a/assets/css/extended/sidetoc.css
+++ b/assets/css/extended/sidetoc.css
@@ -21,6 +21,7 @@
 
 .post-single .post-header {
     grid-column: 1;
+    width: -webkit-fill-available;
 }
 .post-single .entry-cover {
     grid-column: 1;
